<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#5467"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fall2018.csc2017.slidingtiles.StartingActivity">

    <TextView
        android:id="@+id/GameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="174dp"
        android:gravity="center"
        android:text="@string/welcome_to_sliding_tiles_n_a_puzzle_game_where_you_must_arrange_the_numbers_in_the_correct_order"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textSize="16sp" />

    <Button
        android:id="@+id/LoadButton"
        style="@android:style/Widget.DeviceDefault.Button.Small"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/GameText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/load_saved_game" />

    <Button
        android:id="@+id/StartButton"
        style="@android:style/Widget.DeviceDefault.Button.Small"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/LoadButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/new_game" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/StartButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="93dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="120dp"
        android:textSize="16sp" />

    <Button
            android:id="@+id/ScoreBoardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/StartButton"
            android:layout_centerHorizontal="true"
            android:text="@string/view_scoreboard"/>
</RelativeLayout>