<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5467"
    tools:context=".LogInActivity">

    <EditText
        android:id="@+id/usernamea"
        android:layout_width="265dp"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/passworda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <EditText
        android:id="@+id/passworda"
        android:layout_width="265dp"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/signina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernamea" />

    <Button
        android:id="@+id/signina"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="20dp"
        android:text="@string/log_in"
        app:layout_constraintBottom_toTopOf="@+id/textboxa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passworda" />

    <TextView
        android:id="@+id/textboxa"
        android:layout_width="337dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signina" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="153dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="23dp"
        android:text="@string/please_log_in"
        app:layout_constraintBottom_toTopOf="@+id/usernamea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>