<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5467"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textboxa"
        android:layout_width="337dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signina" />

    <EditText
        android:id="@+id/usernamea"
        android:layout_width="265dp"
        android:layout_height="70dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/create_new_username"
        android:inputType="text|textEmailAddress|textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/passworda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passworda"
        android:layout_width="265dp"
        android:layout_height="70dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/create_new_password"
        android:inputType="textPassword|numberPassword"
        app:layout_constraintBottom_toTopOf="@+id/signupa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernamea" />

    <Button
        android:id="@+id/signupa"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="169dp"
        android:layout_height="38dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="142dp"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passworda" />

</android.support.constraint.ConstraintLayout>